# FFMPEG_API_Demo

./: .gitignore  README.md
test1/: CMakeLists.txt  FindFFMPEG.cmake  main.cpp
test2/: Makefile  ffmpeg_test  main.cpp
